Refactored class names to match roots, and renamed StageInitializer to AppManager, and moved it to Main, to make the map structure more logical

--- a/public/Scenes/AlbumScene.html
+++ b/public/Scenes/AlbumScene.html
@@ -98,7 +98,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <!-- ======== START OF CLASS DATA ======== -->
 <main role="main">
 <div class="header">
-<div class="subTitle"><span class="packageLabelInType">Package</span>&nbsp;<a href="package-summary.html">Scenes</a></div>
+<div class="subTitle"><span class="packageLabelInType">Package</span>&nbsp;<a href="package-summary.html">Roots</a></div>
 <h2 title="Class AlbumScene" class="title">Class AlbumScene</h2>
 </div>
 <div class="contentContainer">
@@ -106,10 +106,10 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <li>java.lang.Object</li>
 <li>
 <ul class="inheritance">
-<li><a href="SceneBuilder.html" title="class in Scenes">Scenes.SceneBuilder</a></li>
+<li><a href="SceneBuilder.html" title="class in Roots">Roots.SceneRoot</a></li>
 <li>
 <ul class="inheritance">
-<li>Scenes.AlbumScene</li>
+<li>Roots.AlbumScene</li>
 </ul>
 </li>
 </ul>
@@ -120,7 +120,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <li class="blockList">
 <hr>
 <pre>public class <span class="typeNameLabel">AlbumScene</span>
-extends <a href="SceneBuilder.html" title="class in Scenes">SceneBuilder</a></pre>
+extends <a href="SceneBuilder.html" title="class in Roots">SceneBuilder</a></pre>
 <div class="block">Class for the album scene, which shows all the pictures in an album.</div>
 </li>
 </ul>
@@ -198,10 +198,10 @@ extends <a href="SceneBuilder.html" title="class in Scenes">SceneBuilder</a></pr
 </div>
 </div>
 <ul class="blockList">
-<li class="blockList"><a id="methods.inherited.from.class.Scenes.SceneBuilder">
+<li class="blockList"><a id="methods.inherited.from.class.Scenes.RootBuilder">
 <!--   -->
 </a>
-<h3>Methods inherited from class&nbsp;Scenes.<a href="SceneBuilder.html" title="class in Scenes">SceneBuilder</a></h3>
+<h3>Methods inherited from class&nbsp;Roots.<a href="SceneBuilder.html" title="class in Roots">SceneBuilder</a></h3>
 <code><a href="SceneBuilder.html#getBorderPane()">getBorderPane</a>, <a href="SceneBuilder.html#getGridPane()">getGridPane</a>, <a href="SceneBuilder.html#getScene()">getScene</a>, <a href="SceneBuilder.html#setGridPane()">setGridPane</a>, <a href="SceneBuilder.html#setPageTitle(java.lang.String)">setPageTitle</a></code></li>
 </ul>
 <ul class="blockList">
@@ -257,7 +257,7 @@ extends <a href="SceneBuilder.html" title="class in Scenes">SceneBuilder</a></pr
 <div class="block">Sets up the layout of the album scene, overrides the setlayout method of scenebuilder</div>
 <dl>
 <dt><span class="overrideSpecifyLabel">Overrides:</span></dt>
-<dd><code><a href="SceneBuilder.html#setLayout()">setLayout</a></code>&nbsp;in class&nbsp;<code><a href="SceneBuilder.html" title="class in Scenes">SceneBuilder</a></code></dd>
+<dd><code><a href="SceneBuilder.html#setLayout()">setLayout</a></code>&nbsp;in class&nbsp;<code><a href="SceneBuilder.html" title="class in Roots">SceneBuilder</a></code></dd>
 </dl>
 </li>
 </ul>
