--- a/public/Scenes/SceneBuilder.html
+++ b/public/Scenes/SceneBuilder.html
@@ -98,7 +98,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <!-- ======== START OF CLASS DATA ======== -->
 <main role="main">
 <div class="header">
-<div class="subTitle"><span class="packageLabelInType">Package</span>&nbsp;<a href="package-summary.html">Scenes</a></div>
+<div class="subTitle"><span class="packageLabelInType">Package</span>&nbsp;<a href="package-summary.html">Roots</a></div>
 <h2 title="Class SceneBuilder" class="title">Class SceneBuilder</h2>
 </div>
 <div class="contentContainer">
@@ -106,7 +106,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <li>java.lang.Object</li>
 <li>
 <ul class="inheritance">
-<li>Scenes.SceneBuilder</li>
+<li>Roots.SceneRoot</li>
 </ul>
 </li>
 </ul>
@@ -115,7 +115,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <li class="blockList">
 <dl>
 <dt>Direct Known Subclasses:</dt>
-<dd><code><a href="Albums.html" title="class in Scenes">Albums</a></code>, <code><a href="AlbumScene.html" title="class in Scenes">AlbumScene</a></code>, <code><a href="LogIn.html" title="class in Scenes">LogIn</a></code>, <code><a href="MainMenu.html" title="class in Scenes">MainMenu</a></code>, <code><a href="Search.html" title="class in Scenes">Search</a></code>, <code><a href="SignUp.html" title="class in Scenes">SignUp</a></code>, <code><a href="UploadScene.html" title="class in Scenes">UploadScene</a></code></dd>
+<dd><code><a href="Albums.html" title="class in Roots">Albums</a></code>, <code><a href="AlbumScene.html" title="class in Roots">AlbumScene</a></code>, <code><a href="LogIn.html" title="class in Roots">LogIn</a></code>, <code><a href="MainMenu.html" title="class in Roots">MainMenu</a></code>, <code><a href="Search.html" title="class in Roots">Search</a></code>, <code><a href="SignUp.html" title="class in Roots">SignUp</a></code>, <code><a href="UploadScene.html" title="class in Roots">UploadScene</a></code></dd>
 </dl>
 <hr>
 <pre>public abstract class <span class="typeNameLabel">SceneBuilder</span>
