--- a/public/allclasses-index.html
+++ b/public/allclasses-index.html
@@ -102,13 +102,13 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 </th>
 </tr>
 <tr class="altColor" id="i2">
-<td class="colFirst"><a href="Scenes/Albums.html" title="class in Scenes">Albums</a></td>
+<td class="colFirst"><a href="Scenes/Albums.html" title="class in Roots">Albums</a></td>
 <th class="colLast" scope="row">
 <div class="block">Class for the scene albums</div>
 </th>
 </tr>
 <tr class="rowColor" id="i3">
-<td class="colFirst"><a href="Scenes/AlbumScene.html" title="class in Scenes">AlbumScene</a></td>
+<td class="colFirst"><a href="Scenes/AlbumScene.html" title="class in Roots">AlbumScene</a></td>
 <th class="colLast" scope="row">
 <div class="block">Class for the album scene, which shows all the pictures in an album.</div>
 </th>
@@ -120,7 +120,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 </th>
 </tr>
 <tr class="rowColor" id="i5">
-<td class="colFirst"><a href="Scenes/ConfirmationBox.html" title="class in Scenes">ConfirmationBox</a></td>
+<td class="colFirst"><a href="Scenes/ConfirmationBox.html" title="class in Roots">ConfirmationBox</a></td>
 <th class="colLast" scope="row">
 <div class="block">Utility class that is used to create confirmations boxes</div>
 </th>
@@ -142,7 +142,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <th class="colLast" scope="row">&nbsp;</th>
 </tr>
 <tr class="rowColor" id="i9">
-<td class="colFirst"><a href="Scenes/Header.html" title="class in Scenes">Header</a></td>
+<td class="colFirst"><a href="Scenes/Header.html" title="class in Roots">Header</a></td>
 <th class="colLast" scope="row">
 <div class="block">Class that creates the header of the application</div>
 </th>
@@ -160,13 +160,13 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 </th>
 </tr>
 <tr class="altColor" id="i12">
-<td class="colFirst"><a href="Scenes/ImageMetaDataViewer.html" title="class in Scenes">ImageMetaDataViewer</a></td>
+<td class="colFirst"><a href="Scenes/ImageMetaDataViewer.html" title="class in Roots">ImageMetaDataViewer</a></td>
 <th class="colLast" scope="row">
 <div class="block">Class that is used to display photo metadata</div>
 </th>
 </tr>
 <tr class="rowColor" id="i13">
-<td class="colFirst"><a href="Scenes/LogIn.html" title="class in Scenes">LogIn</a></td>
+<td class="colFirst"><a href="Scenes/LogIn.html" title="class in Roots">LogIn</a></td>
 <th class="colLast" scope="row">
 <div class="block">Class for the log inn scene</div>
 </th>
@@ -178,7 +178,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 </th>
 </tr>
 <tr class="rowColor" id="i15">
-<td class="colFirst"><a href="Scenes/MainMenu.html" title="class in Scenes">MainMenu</a></td>
+<td class="colFirst"><a href="Scenes/MainMenu.html" title="class in Roots">MainMenu</a></td>
 <th class="colLast" scope="row">
 <div class="block">Class for the Main menu scene</div>
 </th>
@@ -202,23 +202,23 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 </th>
 </tr>
 <tr class="rowColor" id="i19">
-<td class="colFirst"><a href="Scenes/SceneBuilder.html" title="class in Scenes">SceneBuilder</a></td>
+<td class="colFirst"><a href="Scenes/SceneBuilder.html" title="class in Roots">SceneBuilder</a></td>
 <th class="colLast" scope="row">
 <div class="block">Class that has the basic structure of the application and that all other scenes extends</div>
 </th>
 </tr>
 <tr class="altColor" id="i20">
-<td class="colFirst"><a href="Scenes/Search.html" title="class in Scenes">Search</a></td>
+<td class="colFirst"><a href="Scenes/Search.html" title="class in Roots">Search</a></td>
 <th class="colLast" scope="row">
 <div class="block">Class for the Search scene</div>
 </th>
 </tr>
 <tr class="rowColor" id="i21">
-<td class="colFirst"><a href="Scenes/SignUp.html" title="class in Scenes">SignUp</a></td>
+<td class="colFirst"><a href="Scenes/SignUp.html" title="class in Roots">SignUp</a></td>
 <th class="colLast" scope="row">&nbsp;</th>
 </tr>
 <tr class="altColor" id="i22">
-<td class="colFirst"><a href="Scenes/StageInitializer.html" title="class in Scenes">StageInitializer</a></td>
+<td class="colFirst"><a href="Scenes/StageInitializer.html" title="class in Roots">StageInitializer</a></td>
 <th class="colLast" scope="row">
 <div class="block">Class that initializes all the scenes in the application</div>
 </th>
@@ -236,7 +236,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 </th>
 </tr>
 <tr class="rowColor" id="i25">
-<td class="colFirst"><a href="Scenes/UploadScene.html" title="class in Scenes">UploadScene</a></td>
+<td class="colFirst"><a href="Scenes/UploadScene.html" title="class in Roots">UploadScene</a></td>
 <th class="colLast" scope="row">
 <div class="block">Class for the upload scene</div>
 </th>
