--- a/public/allpackages-index.html
+++ b/public/allpackages-index.html
@@ -114,7 +114,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <td class="colLast">&nbsp;</td>
 </tr>
 <tr class="altColor">
-<th class="colFirst" scope="row"><a href="Scenes/package-summary.html">Scenes</a></th>
+<th class="colFirst" scope="row"><a href="Scenes/package-summary.html">Roots</a></th>
 <td class="colLast">&nbsp;</td>
 </tr>
 </tbody>
