--- a/public/index-files/index-2.html
+++ b/public/index-files/index-2.html
@@ -82,7 +82,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <dl>
 <dt><a href="../Components/package-summary.html">Components</a> - package Components</dt>
 <dd>&nbsp;</dd>
-<dt><a href="../Scenes/ConfirmationBox.html" title="class in Scenes"><span class="typeNameLink">ConfirmationBox</span></a> - Class in <a href="../Scenes/package-summary.html">Scenes</a></dt>
+<dt><a href="../Scenes/ConfirmationBox.html" title="class in Roots"><span class="typeNameLink">ConfirmationBox</span></a> - Class in <a href="../Scenes/package-summary.html">Roots</a></dt>
 <dd>
 <div class="block">Utility class that is used to create confirmations boxes</div>
 </dd>
