--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <td class="colLast">&nbsp;</td>
 </tr>
 <tr class="rowColor" id="i5">
-<th class="colFirst" scope="row"><a href="Scenes/package-summary.html">Scenes</a></th>
+<th class="colFirst" scope="row"><a href="Scenes/package-summary.html">Roots</a></th>
 <td class="colLast">&nbsp;</td>
 </tr>
 </tbody>
