--- a/public/overview-tree.html
+++ b/public/overview-tree.html
@@ -84,7 +84,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <li><a href="Database/package-tree.html">Database</a>, </li>
 <li><a href="Database/HibernateClasses/package-tree.html">Database.HibernateClasses</a>, </li>
 <li><a href="Main/package-tree.html">Main</a>, </li>
-<li><a href="Scenes/package-tree.html">Scenes</a></li>
+<li><a href="Scenes/package-tree.html">Roots</a></li>
 </ul>
 </div>
 <div class="contentContainer">
@@ -101,29 +101,29 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 </ul>
 </li>
 <li class="circle">Components.<a href="Components/Authentication.html" title="class in Components"><span class="typeNameLink">Authentication</span></a></li>
-<li class="circle">Scenes.<a href="Scenes/ConfirmationBox.html" title="class in Scenes"><span class="typeNameLink">ConfirmationBox</span></a></li>
+<li class="circle">Roots.<a href="Scenes/ConfirmationBox.html" title="class in Roots"><span class="typeNameLink">ConfirmationBox</span></a></li>
 <li class="circle">Css.<a href="Css/Css.html" title="class in Css"><span class="typeNameLink">Css</span></a></li>
 <li class="circle">Components.<a href="Components/Encryptor.html" title="class in Components"><span class="typeNameLink">Encryptor</span></a></li>
 <li class="circle"><a href="EncryptorTest.html" title="class in &lt;Unnamed&gt;"><span class="typeNameLink">EncryptorTest</span></a></li>
-<li class="circle">Scenes.<a href="Scenes/Header.html" title="class in Scenes"><span class="typeNameLink">Header</span></a></li>
+<li class="circle">Roots.<a href="Scenes/Header.html" title="class in Roots"><span class="typeNameLink">Header</span></a></li>
 <li class="circle">Database.<a href="Database/Hibernate.html" title="class in Database"><span class="typeNameLink">Hibernate</span></a></li>
 <li class="circle">Components.<a href="Components/ImageAnalyzer.html" title="class in Components"><span class="typeNameLink">ImageAnalyzer</span></a></li>
-<li class="circle">Scenes.<a href="Scenes/ImageMetaDataViewer.html" title="class in Scenes"><span class="typeNameLink">ImageMetaDataViewer</span></a></li>
+<li class="circle">Roots.<a href="Scenes/ImageMetaDataViewer.html" title="class in Roots"><span class="typeNameLink">ImageMetaDataViewer</span></a></li>
 <li class="circle">Components.<a href="Components/PDFcreator.html" title="class in Components"><span class="typeNameLink">PDFcreator</span></a></li>
 <li class="circle">Database.HibernateClasses.<a href="Database/HibernateClasses/Photo.html" title="class in Database.HibernateClasses"><span class="typeNameLink">Photo</span></a> (implements java.io.Serializable)</li>
 <li class="circle">Components.<a href="Components/PhotoContainer.html" title="class in Components"><span class="typeNameLink">PhotoContainer</span></a></li>
-<li class="circle">Scenes.<a href="Scenes/SceneBuilder.html" title="class in Scenes"><span class="typeNameLink">SceneBuilder</span></a>
+<li class="circle">Roots.<a href="Scenes/SceneBuilder.html" title="class in Roots"><span class="typeNameLink">SceneBuilder</span></a>
 <ul>
-<li class="circle">Scenes.<a href="Scenes/Albums.html" title="class in Scenes"><span class="typeNameLink">Albums</span></a></li>
-<li class="circle">Scenes.<a href="Scenes/AlbumScene.html" title="class in Scenes"><span class="typeNameLink">AlbumScene</span></a></li>
-<li class="circle">Scenes.<a href="Scenes/LogIn.html" title="class in Scenes"><span class="typeNameLink">LogIn</span></a></li>
-<li class="circle">Scenes.<a href="Scenes/MainMenu.html" title="class in Scenes"><span class="typeNameLink">MainMenu</span></a></li>
-<li class="circle">Scenes.<a href="Scenes/Search.html" title="class in Scenes"><span class="typeNameLink">Search</span></a></li>
-<li class="circle">Scenes.<a href="Scenes/SignUp.html" title="class in Scenes"><span class="typeNameLink">SignUp</span></a></li>
-<li class="circle">Scenes.<a href="Scenes/UploadScene.html" title="class in Scenes"><span class="typeNameLink">UploadScene</span></a></li>
+<li class="circle">Roots.<a href="Scenes/Albums.html" title="class in Roots"><span class="typeNameLink">Albums</span></a></li>
+<li class="circle">Roots.<a href="Scenes/AlbumScene.html" title="class in Roots"><span class="typeNameLink">AlbumScene</span></a></li>
+<li class="circle">Roots.<a href="Scenes/LogIn.html" title="class in Roots"><span class="typeNameLink">LogIn</span></a></li>
+<li class="circle">Roots.<a href="Scenes/MainMenu.html" title="class in Roots"><span class="typeNameLink">MainMenu</span></a></li>
+<li class="circle">Roots.<a href="Scenes/Search.html" title="class in Roots"><span class="typeNameLink">Search</span></a></li>
+<li class="circle">Roots.<a href="Scenes/SignUp.html" title="class in Roots"><span class="typeNameLink">SignUp</span></a></li>
+<li class="circle">Roots.<a href="Scenes/UploadScene.html" title="class in Roots"><span class="typeNameLink">UploadScene</span></a></li>
 </ul>
 </li>
-<li class="circle">Scenes.<a href="Scenes/StageInitializer.html" title="class in Scenes"><span class="typeNameLink">StageInitializer</span></a></li>
+<li class="circle">Roots.<a href="Scenes/StageInitializer.html" title="class in Roots"><span class="typeNameLink">StageInitializer</span></a></li>
 <li class="circle">Components.<a href="Components/TagContainer.html" title="class in Components"><span class="typeNameLink">TagContainer</span></a></li>
 <li class="circle">Database.HibernateClasses.<a href="Database/HibernateClasses/Tags.html" title="class in Database.HibernateClasses"><span class="typeNameLink">Tags</span></a> (implements java.io.Serializable)</li>
 <li class="circle">Database.HibernateClasses.<a href="Database/HibernateClasses/User.html" title="class in Database.HibernateClasses"><span class="typeNameLink">User</span></a> (implements java.io.Serializable)</li>
