--- a/public/Scenes/Header.html
+++ b/public/Scenes/Header.html
@@ -98,7 +98,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <!-- ======== START OF CLASS DATA ======== -->
 <main role="main">
 <div class="header">
-<div class="subTitle"><span class="packageLabelInType">Package</span>&nbsp;<a href="package-summary.html">Scenes</a></div>
+<div class="subTitle"><span class="packageLabelInType">Package</span>&nbsp;<a href="package-summary.html">Roots</a></div>
 <h2 title="Class Header" class="title">Class Header</h2>
 </div>
 <div class="contentContainer">
@@ -106,7 +106,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <li>java.lang.Object</li>
 <li>
 <ul class="inheritance">
-<li>Scenes.Header</li>
+<li>Roots.Header</li>
 </ul>
 </li>
 </ul>
