--- a/public/Scenes/MainMenu.html
+++ b/public/Scenes/MainMenu.html
@@ -98,7 +98,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <!-- ======== START OF CLASS DATA ======== -->
 <main role="main">
 <div class="header">
-<div class="subTitle"><span class="packageLabelInType">Package</span>&nbsp;<a href="package-summary.html">Scenes</a></div>
+<div class="subTitle"><span class="packageLabelInType">Package</span>&nbsp;<a href="package-summary.html">Roots</a></div>
 <h2 title="Class MainMenu" class="title">Class MainMenu</h2>
 </div>
 <div class="contentContainer">
@@ -106,10 +106,10 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <li>java.lang.Object</li>
 <li>
 <ul class="inheritance">
-<li><a href="SceneBuilder.html" title="class in Scenes">Scenes.SceneBuilder</a></li>
+<li><a href="SceneBuilder.html" title="class in Roots">Roots.SceneRoot</a></li>
 <li>
 <ul class="inheritance">
-<li>Scenes.MainMenu</li>
+<li>Roots.MainMenu</li>
 </ul>
 </li>
 </ul>
@@ -120,7 +120,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <li class="blockList">
 <hr>
 <pre>public class <span class="typeNameLabel">MainMenu</span>
-extends <a href="SceneBuilder.html" title="class in Scenes">SceneBuilder</a></pre>
+extends <a href="SceneBuilder.html" title="class in Roots">SceneBuilder</a></pre>
 <div class="block">Class for the Main menu scene</div>
 </li>
 </ul>
@@ -182,10 +182,10 @@ extends <a href="SceneBuilder.html" title="class in Scenes">SceneBuilder</a></pr
 </div>
 </div>
 <ul class="blockList">
-<li class="blockList"><a id="methods.inherited.from.class.Scenes.SceneBuilder">
+<li class="blockList"><a id="methods.inherited.from.class.Scenes.RootBuilder">
 <!--   -->
 </a>
-<h3>Methods inherited from class&nbsp;Scenes.<a href="SceneBuilder.html" title="class in Scenes">SceneBuilder</a></h3>
+<h3>Methods inherited from class&nbsp;Roots.<a href="SceneBuilder.html" title="class in Roots">SceneBuilder</a></h3>
 <code><a href="SceneBuilder.html#getBorderPane()">getBorderPane</a>, <a href="SceneBuilder.html#getGridPane()">getGridPane</a>, <a href="SceneBuilder.html#getScene()">getScene</a>, <a href="SceneBuilder.html#setGridPane()">setGridPane</a>, <a href="SceneBuilder.html#setPageTitle(java.lang.String)">setPageTitle</a></code></li>
 </ul>
 <ul class="blockList">
@@ -241,7 +241,7 @@ extends <a href="SceneBuilder.html" title="class in Scenes">SceneBuilder</a></pr
  called in the method in order to modify the method.</div>
 <dl>
 <dt><span class="overrideSpecifyLabel">Overrides:</span></dt>
-<dd><code><a href="SceneBuilder.html#setLayout()">setLayout</a></code>&nbsp;in class&nbsp;<code><a href="SceneBuilder.html" title="class in Scenes">SceneBuilder</a></code></dd>
+<dd><code><a href="SceneBuilder.html#setLayout()">setLayout</a></code>&nbsp;in class&nbsp;<code><a href="SceneBuilder.html" title="class in Roots">SceneBuilder</a></code></dd>
 </dl>
 </li>
 </ul>
